Fix navbar on mobile

--- a/css/kien-do-portfolio.webflow.css
+++ b/css/kien-do-portfolio.webflow.css
@@ -19,6 +19,8 @@
 .nav-link {
   margin: 20px 15px 10px;
   padding: 0px 0px 5px;
+  -webkit-transition: all 200ms ease;
+  transition: all 200ms ease;
   font-family: 'Open Sans', sans-serif;
   color: #000;
   font-size: 14px;
@@ -31,11 +33,14 @@
 
 .nav-link:hover {
   padding-left: 0px;
-  border-bottom: 3px solid #000;
+  border-top: 1px none #17624b;
+  border-bottom: 3px none #000;
+  color: #2ecc71;
 }
 
 .nav-link.w--current {
-  color: #17624b;
+  color: #000;
+  text-decoration: underline;
 }
 
 .nav-link.blog-link {
@@ -44,6 +49,7 @@
 
 .nav-link.blog-link:hover {
   border-bottom-color: #17624b;
+  color: #17624b;
 }
 
 .greeting {
@@ -152,7 +158,7 @@
   left: 0px;
   top: 0px;
   right: 0px;
-  display: none;
+  display: block;
   border-bottom: 1px none #000;
   background-color: #f5f5f5;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .54);
@@ -391,6 +397,10 @@
   float: right;
 }
 
+.container-headline {
+  width: 66%;
+}
+
 html.w-mod-js *[data-ix="fade-in-when-load"] {
   display: block;
   opacity: 0;
@@ -508,11 +518,17 @@ html.w-mod-js *[data-ix="bounce"] {
     margin-top: 0px;
     margin-bottom: 0px;
   }
+  .section.after-first-section {
+    padding-top: 0px;
+  }
   .big-text {
     direction: ltr;
     line-height: 84px;
     text-align: left;
     text-transform: none;
+  }
+  .navbar {
+    display: block;
   }
   .social.social-nav {
     display: block;
@@ -534,8 +550,16 @@ html.w-mod-js *[data-ix="bounce"] {
 
 @media (max-width: 479px) {
   .big-text {
+    margin-top: 20%;
     font-size: 50px;
     line-height: 45px;
+  }
+  .social-link {
+    margin-right: 5px;
+    margin-left: 5px;
+  }
+  .link.mail {
+    margin-right: 5px;
   }
 }
 
